# smt-comp.github.io

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  _config.yml  benchmark_submission.md  benchmarks.md  docker-compose.yml  index.html  index.md  introduction.md  model.md  news.html  news.md  papers.md  participants-and-divisions-split.md  participants-and-divisions-split_split.md  participants-and-divisions.md  participants.md  previous.md  publications.html  pyproject.toml  results.html  results.md  rules.md  smtlib.md  tools.md
.devcontainer/: devcontainer.json
2012/: benchmarks.md  results.md  tools.md
2014/: index.md  participants.md  results.md  tools.md
2015/: index.md  participants.md  results.md  tools.md
2016/: benchmarks.md  index.md  participants.md  results.md  specs.md  tools.md
2017/: index.md  participants.md  results.md  tools.md
2018/: benchmarks.md  index.md  news.md  participants.md  results.md  tools.md
2019/: benchmarks.md  index.md  news.md  participants.md  results.md  specs.md  tools.md
2020/: benchmarks.md  index.md  news.md  participants.md  results.md  tools.md
2021/: benchmarks.md  index.md  parallel-and-cloud-tracks.md  participants.md  results.md  tools.md
2022/: benchmarks.md  comparisons.html  index.md  parallel-and-cloud-tracks.md  participants.md  proof-track.md  results.md  slides.md  sq.csv  stats.html  tools.md
2023/: benchmarks.md  index.md  model.md  parallel-and-cloud-tracks.md  participants.md  proof-track.md  results.md  slides.md  specs.md  sq.csv
_benchmarks/: ABVAFPNIALIARDLNRALRANRALRA.md  ABVFP.md  ABVNIA.md  ADTFPDTNRAUFIDLUFNIAIDL.md  ADTRDLFPBVLRAIDLBVDTBVA.md  ALIA.md  ALRAA.md  ANIA.md  AUFBVDTLIA.md  AUFDTLIA.md  AUFLIA.md  AUFLIRA.md  AUFNIA.md  AUFNIRA.md  BV.md  BVDTNIANIAFPLIA.md  BVFP.md  BVNRANRA.md  BVNRAUFFPAUF.md  BVRDLRDLLRA.md  DTDTNIABVFP.md  DTDTNIALIAFPRDLNIALRAIDLNRA.md  DTIDLRDLUFADTRDLNIA.md  DTIDLUFRDLUFLRA.md  DTNIA.md  DTNIANIAFPIDLRDLNIALIA.md  FP.md  FPBVRDLDTLRALRAFPLIAA.md  FPNIAUFNRAUFNRARDLAUFNRALIA.md  IDLBVLRALIALRADTLRALRABV.md  IDLDT.md  IDLDTFPLRAA.md  IDLIDLNRAUFIDLDTBV.md  IDLLRAFPBVNIADTIDLRDL.md  IDLNRADTLRAUFIDLLIA.md  IDLUFNRAUFNIALRAAIDLAFP.md  LIA.md  LIAALIALRA.md  LIABVUFBVFPNIAAALRA.md  LIADTBVBVABVUFBVBVLRAIDL.md  (+156 more)
_benchmarks_2019/: ABVFP.md  ALIA.md  ANIA.md  AUFDTLIA.md  AUFLIRA.md  AUFNIA.md  AUFNIRA.md  BV.md  BVFP.md  LIA.md  QF_ALIA.md  QF_ANIA.md  QF_AUFBVLIA.md  QF_AX.md  QF_BVFPLRA.md  QF_DT.md  QF_LIA.md  QF_LIRA.md  QF_LRA.md  QF_NRA.md  QF_RDL.md  QF_S.md  QF_SLIA.md  QF_UF.md  QF_UFBVLIA.md  QF_UFNRA.md  UFBV.md  UFDT.md
_bibtex/: 2006-design-and-results-of-the-2nd-SMT-COMP.md  2007-design-and-results-of-the-3rd-SMT-COMP.md  2008-design-and-results-of-the-4th-SMT-COMP.md  2010-6-years-of-smt-comp.md  2012-the-2012-competition.md  2013-the-2013-evaluation.md  2014-the-2014-smt-competition.md  2018-the-smt-competition-2015-2018.md
_challenge-results/: A.md  ABVNIA.md  ALIADTDTNIA.md  ALIAIDLRDLLRABVRDLUFNIA.md  ALIALIAIDLLIALRA.md  ALRAA.md  ANIAABVNIARDLRDLBV.md  BV.md  BVDTIDLLIADT.md  BVDTNIANIAFPLIA.md  BVFPUFDTFPIDLLRABVANIA.md  BVIDLDTUFFPDTLRA.md  BVLRANRAUFLIAFPLRARDL.md  BVNIALIABVNRADTNRABVLIA.md  BVNRALRAUFIDLRDLIDLDTRDLIDL.md  BVNRANIANIAFPAARDL.md  BVNRAUF.md  BVUFBV.md  DT.md  DTBVBVDTNIAFPIDLRDLLIA.md  DTBVUFNIANRANIAFP.md  DTDTNIALIAFPRDLNIALRAIDLNRA.md  DTIDL.md  DTIDLUFRDLUFLRA.md  DTNIANIAFPIDLRDLNIALIA.md  DTUFRDLUFANRA.md  FP.md  FPIDLUFDTLIAFPNIAUFLRA.md  FPLIADTBVBVBVDTA.md  FPNIAUFNRAABV.md  FPNIAUFNRAUFNRARDLAUFNRALIA.md  FPNRAFPLRA.md  FPRDLNRALIANRAIDLLRADTIDLUF.md  FPRDLUFRDLNIARDLNIALIA.md  FPUF.md  IDLA.md  IDLAUFNRARDLFPNIARDLLRA.md  IDLBVLRALIALRADTLRALRABV.md  IDLDTBVLRABV.md  IDLDTFPBVRDLNRABVNRALIAFPRDL.md  (+273 more)
_data/: .navigation.yml.swp  competitions.yml  logics.yml  navigation.yml  nyse_composite_index.yml  results_index.yml  selected_benchmarks.yml  tools.yml  tracks.yml  tracks_split.yml
_disagreements_2020/: FP-incremental.md  FP-single-query.md  FP.md  LIA-incremental.md  LIA-single-query.md  LIA.md  NIA.md  QF_ABVFPLRA-incremental.md  QF_ABVFPLRA-single-query.md  QF_ABVFPLRA.md  QF_BVFP-incremental.md  QF_S-incremental.md  QF_S-single-query.md  QF_S.md  QF_SLIA-incremental.md  QF_SLIA-single-query.md  QF_SLIA.md  UF-incremental.md  UFDTLIRA.md  UFNIA-incremental.md  UFNIA-single-query.md  UFNIA.md
_divisions_2019/: ABVFP.md  ALIA.md  ANIA.md  AUFBVDTLIA.md  AUFDTLIA.md  AUFLIA.md  AUFLIRA.md  AUFNIA.md  AUFNIRA.md  BV.md  BVFP.md  FP.md  LIA.md  LRA.md  NIA.md  NRA.md  QF_ABV.md  QF_ABVFP.md  QF_ALIA.md  QF_ANIA.md  QF_AUFBV.md  QF_AUFBVLIA.md  QF_AUFBVNIA.md  QF_AUFLIA.md  QF_AUFNIA.md  QF_AX.md  QF_BV.md  QF_BVFP.md  QF_BVFPLRA.md  QF_DT.md  QF_FP.md  QF_FPLRA.md  QF_IDL.md  QF_LIA.md  QF_LIRA.md  QF_LRA.md  QF_NIA.md  QF_NIRA.md  QF_NRA.md  QF_RDL.md  (+19 more)
_divisions_2020/: ABV.md  ABVFP.md  ABVFPLRA.md  ALIA.md  ANIA.md  AUFBVDTLIA.md  AUFBVDTNIA.md  AUFDTLIA.md  AUFDTLIRA.md  AUFDTNIRA.md  AUFFPDTLIRA.md  AUFFPDTNIRA.md  AUFLIA.md  AUFLIRA.md  AUFNIA.md  AUFNIRA.md  BV.md  BVFP.md  BVFPLRA.md  FP.md  FPLRA.md  LIA.md  LRA.md  NIA.md  NRA.md  QF_ABV.md  QF_ABVFP.md  QF_ABVFPLRA.md  QF_ALIA.md  QF_ANIA.md  QF_AUFBV.md  QF_AUFBVLIA.md  QF_AUFBVNIA.md  QF_AUFLIA.md  QF_AUFNIA.md  QF_AX.md  QF_BV.md  QF_BVFP.md  QF_BVFPLRA.md  QF_DT.md  (+35 more)
_divisions_2021/: ABV.md  AUFBVDTNIA.md  AUFFPDTNIRA.md  Arith.md  BV.md  Bitvec.md  Equality+LinearArith.md  Equality+MachineArith.md  Equality+NonLinearArith.md  Equality.md  FPArith.md  QF_BV.md  QF_Bitvec.md  QF_Equality+Bitvec+Arith.md  QF_Equality+Bitvec.md  QF_Equality+LinearArith.md  QF_Equality+NonLinearArith.md  QF_Equality.md  QF_FPArith.md  QF_LinearIntArith.md  QF_LinearRealArith.md  QF_NonLinearIntArith.md  QF_NonLinearRealArith.md  QF_Strings.md  QF_cc.md  QF_cc_la.md  QF_cc_na.md  QF_lia.md  QF_lra.md  QF_machine_cc_bv.md  QF_machine_fp.md  QF_nia.md  QF_nra.md  QF_str.md  arith.md  cc.md  cc_la.md  cc_machine.md  cc_na.md  machine.md
_divisions_2022/: Arith.md  Bitvec.md  (+18 more)
(+7152 files in other folders)
