[tool.poetry]
name = "smtcomp"
version = "0.1.0"
description = ""
authors = ["SMTCOMP"]
license = "MIT"
readme = "README.md"
packages = [{include = "smtcomp"}]

[tool.poetry.scripts]
smtcomp-validate = "src.task:main"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = { extras = ["dotenv"], version = "*" }
python-dotenv = "*"
python-json-logger = "*"
typer = "*"

[tool.poetry.group.dev.dependencies]
bandit = "*"
black = { allow-prereleases = true, version = "*" }
isort = "*"
mypy = "*"
poetry = "^1.4.2"
pytest = "*"
pytest-cov = "*"
ruff = "*"

[tool.black]
line-length = 88
target-version = ["py310"]
include = ".pyi?$"
exclude = """
(
  /(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
"""

[tool.isort]
# compatible with psf/black
# https://pycqa.github.io/isort/docs/configuration/black_compatibility/
# https://github.com/psf/black/blob/master/docs/compatible_configs.md
profile = "black"
float_to_top = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
    -ra
    -v
    --strict-markers
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
